--- a/AllTUT/package.json
+++ b/AllTUT/package.json
@@ -1,17 +1,18 @@
 {
-    "name": "05tut",
+    "name": "06tut",
     "version": "1.0.0",
-    "description": "",
+    "description": "Express Tutorials",
     "main": "server.js",
     "scripts": {
         "start": "node server",
         "dev": "nodemon server"
     },
     "keywords": [],
-    "author": "",
+    "author": "Dimas Tri Raharjo",
     "license": "ISC",
     "dependencies": {
         "date-fns": "^2.30.0",
+        "express": "^4.18.2",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
