--- a/AllTUT/package.json
+++ b/AllTUT/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "09tut",
+    "name": "10tut",
     "version": "1.0.0",
     "description": "Express Tutorials",
     "main": "server.js",
@@ -11,6 +11,7 @@
     "author": "Dimas Tri Raharjo",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "date-fns": "^2.30.0",
         "express": "^4.18.2",
