--- a/AllTUT/package.json
+++ b/AllTUT/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "12tut",
+    "name": "13tut",
     "version": "1.0.0",
-    "description": "Express Tutorials",
+    "description": "MongoDB with NodeJS Tutorials",
     "main": "server.js",
     "scripts": {
         "start": "node server",
@@ -18,6 +18,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
+        "mongoose": "^6.11.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
